# virasign

./: .gitignore  .mergify.yml  CITATION.cff  Dockerfile  LICENSE  README.md  pyproject.toml  results_summary_RVDB.html  setup.py
.github/workflows/: docker-publish.yml
conda-recipes/: meta.yaml  meta.yml
docs/: NOGR.md  Z_SCORE.md
docs/citations/: CITATIONS.md
docs/docker/: Dockerfile
refselector/: __init__.py  reference_selection.py
virasign/: __init__.py  virasign.py
