[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "virasign"
version = "1.0.0"
description = "Virasign: Viral Read ASSIGNment from nanopore sequencing"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    {name = "Virasign Team"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
virasign = "virasign.reference_selection:main"

[tool.setuptools]
packages = ["virasign"]
